# SO_AeroHand

./: .gitignore  .gitmodules  AGENTS.md  MUJOCO_LOG.TXT  README.md  README.zh-CN.md  THIRD_PARTY_NOTICES.md  pyproject.toml
aero_quest/: __init__.py  action_optimizer.py  aero_hand_teleop.py  arm_teleop.py  closure_features.py  closure_loss.py  motion_planning.py  mujoco_control.py  mujoco_landmarks.py  osqp_ik.py  pinch_state.py  quality_filter.py  quest_data_quality.py  quest_dual_channel.py  quest_frame_buffer.py  quest_hand_frame.py  quest_logger.py  quest_receiver.py  quest_replay.py  retargeting.py  retargeting_tasks.py  scene_builder.py  skeleton_visualizer.py  so101_aero_control.py
aero_tasks/: __init__.py  blender_liquid.py  blender_render.py  blender_scene.py  lerobot_export.py  liquid.py  liquid_detection.py  liquid_eval.py  liquid_meshplane.py  payload_collision.py  task_sampling.py  tip_attachment.py
configs/: quest_arm_teleop.yaml
data/: README.md  aero_vector_pseudolabels.npz  quest_landmarks.npz  retargeting_pseudolabels.npz  retargeting_pseudolabels_test.npz  retargeting_pseudolabels_test500.npz  so101_random_rollout.npz
debug/: session.npz
docs/: DEX_RETARGETING_ADAPTATION.zh-CN.md  TELEOP_ARCHITECTURE.zh-CN.md  aero_quest_sim_tutorial.tex  formula_retargeting_tutorial.md  quest_dual_channel_pipeline.md  quest_telemetry_layer.md  so101_mujoco_integration.md
quest_aerohand_retargeting/: ANALYSIS.zh-CN.md  MUJOCO_SIM_INTEGRATION.zh-CN.md  README.md  requirements.txt
scripts/: 01_check_mujoco.py  02_print_actuators.py  04_receive_quest_tcp.py  (+28 more)
(+155 files in other folders)
