[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aero-quest-sim"
version = "0.1.0"
description = "Meta Quest hand tracking to MuJoCo teleoperation for an SO101 arm with an Aero Hand."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=0.29",
    "mujoco>=3.2",
    "numpy>=1.24",
    "osqp>=0.6.3",
    "PyYAML>=6.0",
    "scipy>=1.10",
]

[project.optional-dependencies]
quest = [
    "hand-tracking-sdk",
]
visualization = [
    "matplotlib>=3.7",
    "Pillow>=9",
]
dev = [
    "pytest>=8",
]

[tool.setuptools.packages.find]
include = ["aero_quest*"]
