[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aero-quest-sim"
version = "0.1.0"
description = "MuJoCo expert trajectory generation and Quest teleoperation for Piper/SO101 arms with Aero Hand."
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=0.29",
    "mujoco>=3.2",
    "numpy>=1.24",
    "osqp>=1.0",
    "PyYAML>=6.0",
    "scipy>=1.10",
]

[project.optional-dependencies]
quest = [
    "hand-tracking-sdk",
]
dev = [
    "pytest>=8",
]
blender = [
    "bpy==5.0.1; python_version == '3.11'",
    "imageio[ffmpeg]>=2.34",
]

[tool.setuptools.packages.find]
include = ["aero_quest*", "aero_tasks*"]
